conexion a base de datos y migraciones existosas

--- a/CoderFirs/appsettings.json
+++ b/CoderFirs/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionDefault": "Server=DESKTOP-H98GDJT\\SQLEXPRESS; Database=Store; Trusted_Connection=True; Trust Server Certificate=True"
+  }
 }
